// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldTextArea 1`] = `
.c2 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 .c5 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c1 {
  width: 13rem;
}

.c1 .c6 {
  width: 100%;
}

.c1 .c7 {
  width: 100%;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width="13rem"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="FieldTextArea"
    >
      this is a label
    </label>
  </div>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c4 "
      >
        <textarea
          height="6.25rem"
          resize={true}
          width="16rem"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldTextArea with a validation message 1`] = `
.c2 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  color: #CC1F36;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.75rem;
  padding-right: 2rem;
  border-color: #ED3B53;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 textarea:hover {
  border-color: #CC1F36;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c7 {
  color: #CC1F36;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
}

.c1 {
  width: 13rem;
}

.c1 .c9 {
  width: 100%;
}

.c1 .c10 {
  width: 100%;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
    width="13rem"
  >
    <label
      className="c3"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="errorMessage"
    >
      this is a label
    </label>
  </div>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c4 "
      >
        <textarea
          height="6.25rem"
          resize={true}
          width="16rem"
        />
        <div
          className="c5 c6 "
          color="palette.red500"
          size="1rem"
        >
          <svg
            fill="currentColor"
            height="100%"
            viewBox="0 0 22 19"
            width="100%"
          >
            <title>
              Warning
            </title>
            <path
              d="M0 19h22L11 0 0 19zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="c7"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;
